# rdiff

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: release.yml
docs/: CHANGELOG.md  DISTRIBUTION_GUIDE.md  DISTRIBUTION_SUMMARY.md  FEATURES_SUMMARY.md  LARGE_FILE_OPTIMIZATION.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  README_INSTALLATION_SECTION.md  RELEASE_CHECKLIST.md  TODO.md  WEB_FEATURES_UPDATE.md
examples/: sample1.txt  sample2.txt
scripts/: demo_optimizations.sh  test_adaptive_diff.sh  test_large_file.sh  test_paginated_api.sh  test_progress.sh  test_virtual_scroll.sh  test_web.sh  test_web_features.sh
src/: lib.rs  main.rs
src/cli/: args.rs
src/diff/: directory.rs  file.rs  formatter.rs  large_file.rs  mod.rs  types.rs
src/utils/: error.rs  fs.rs
src/web/: assets.rs  mod.rs  server.rs  templates.rs
test_web_features/: file1.txt  file2.txt
