[package]
name = "rust-diff-tool"
version = "0.1.1"
edition = "2024"
authors = ["wsafight <wsafight@outlook.com>"]
description = "A powerful CLI diff tool with web visualization and large file optimization"
license = "MIT"
repository = "https://github.com/wsafight/rdiff"
homepage = "https://github.com/wsafight/rdiff"
documentation = "https://github.com/wsafight/rdiff#readme"
readme = "README.md"
keywords = ["diff", "cli", "git", "comparison", "tool"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "scripts/",
    "docs/",
    ".github/",
]

[[bin]]
name = "rdiff"
path = "src/main.rs"

[dependencies]
# CLI 框架
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }

# Diff 核心库
similar = { version = "2.7", features = ["inline", "text"] }

# Web 服务器
axum = "0.8"
tokio = { version = "1.49", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# 序列化和文件处理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 文件系统操作
walkdir = "2.5"
ignore = "0.4"

# 终端颜色和格式化
colored = "3.1"

# 浏览器自动打开
open = "5.3"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 大文件性能优化
memmap2 = "0.9"          # 内存映射文件
memchr = "2.7"           # 快速字节查找
rayon = "1.10"           # 并行处理
num_cpus = "1.16"        # CPU 核心数检测
indicatif = "0.17"       # 进度条

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
